--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:59:12 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:59:55 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,6 +166,22 @@ E thru 1</td>
 E thru 1</td>
       <td>Tony Finau -1
 Not started</td>
+      <td class="greyout leftborder">Shane Lowry +1
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-5</td>
+      <td>Patrick Cantlay -2
+E thru 1</td>
+      <td>Corey Conners -2
+E thru 7</td>
+      <td>Tyrrell Hatton -1
+-1 thru 3</td>
+      <td>Jon Rahm E
+-2 thru 2</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -220,22 +236,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-4</td>
-      <td>Patrick Cantlay -2
-E thru 1</td>
-      <td>Corey Conners -2
-E thru 7</td>
-      <td>Tyrrell Hatton -1
--1 thru 3</td>
-      <td>Jon Rahm +1
--1 thru 1</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
@@ -249,6 +249,22 @@ Not started</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 Not started</td>
       <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 1</td>
+      <td>Jon Rahm E
+-2 thru 2</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 1</td>
+      <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
     <tr>
@@ -268,32 +284,16 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 1</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
-      <td class="greyout">Brooks Koepka +3
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Patrick Cantlay -2
 E thru 1</td>
       <td>Tony Finau -1
 Not started</td>
+      <td>Jon Rahm(W) E
+-2 thru 2</td>
       <td>Collin Morikawa E
 -1 thru 2</td>
-      <td>Jon Rahm(W) +1
--1 thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
@@ -301,15 +301,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Corey Conners(W) -2
 E thru 7</td>
       <td>Daniel Berger -1
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 2</td>
-      <td>Jon Rahm +1
--1 thru 1</td>
+      <td>Jon Rahm E
+-2 thru 2</td>
       <td class="greyout leftborder">Robert MacIntyre +1
 E thru 8</td>
       <td class="greyout">Jordan Spieth +2
@@ -317,13 +317,13 @@ E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Dustin Johnson -3
 E thru 2</td>
       <td>Patrick Cantlay -2
 E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 1</td>
+      <td>Jon Rahm E
+-2 thru 2</td>
       <td>Jordan Spieth(W) +2
 E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +2
@@ -365,11 +365,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -2
 E thru 7</td>
-      <td>Jon Rahm +1
--1 thru 1</td>
+      <td>Jon Rahm E
+-2 thru 2</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td>Jordan Spieth +2
@@ -381,11 +381,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
+      <td>Jon Rahm E
+-2 thru 2</td>
       <td>Collin Morikawa E
 -1 thru 2</td>
-      <td>Jon Rahm +1
--1 thru 1</td>
       <td>Viktor Hovland(W) +2
 +2 thru 1</td>
       <td>Patrick Reed +2
