--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:59:55 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:00:38 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -181,7 +181,7 @@ Not started</td>
       <td>Corey Conners -2
 E thru 7</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Russell Henley +3
 +2 thru 7</td>
       <td class="greyout">Brooks Koepka +3
@@ -197,27 +197,11 @@ Not started</td>
       <td>Corey Conners -2
 E thru 7</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Xander Schauffele(W) +2
 E thru 1</td>
       <td class="greyout">Viktor Hovland +2
 +2 thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 1</td>
-      <td>Matthew Fitzpatrick -1
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 1</td>
-      <td class="greyout">Brooks Koepka +3
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -229,7 +213,7 @@ E thru 1</td>
       <td>Corey Conners -2
 E thru 7</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Jon Rahm(W) E
 -2 thru 2</td>
       <td class="greyout">Viktor Hovland +2
@@ -252,6 +236,22 @@ E thru 1</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 1</td>
+      <td>Matthew Fitzpatrick E
++1 thru 1</td>
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 1</td>
+      <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -4
@@ -259,7 +259,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
@@ -293,7 +293,7 @@ E thru 1</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -325,7 +325,7 @@ E thru 7</td>
       <td>Webb Simpson -1
 E thru 4</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Jon Rahm(W) E
 -2 thru 2</td>
       <td class="greyout">Xander Schauffele +2
@@ -339,7 +339,7 @@ Not started</td>
       <td>Corey Conners(W) -2
 E thru 7</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -419,7 +419,7 @@ Not started</td>
       <td>Corey Conners -2
 E thru 7</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
       <td class="greyout leftborder">Xander Schauffele +2
@@ -499,25 +499,9 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 1</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Xander Schauffele +2
 E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Matthew Fitzpatrick -1
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 1</td>
-      <td>Shane Lowry +1
-Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -556,19 +540,19 @@ E thru 1</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-4</td>
-      <td>Dustin Johnson(W) -3
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Will Zalatoris -1
 E thru 2</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Matthew Fitzpatrick -1
-Not started</td>
+      <td>Matthew Fitzpatrick E
++1 thru 1</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
-      <td class="greyout">Louis Oosthuizen +4
+      <td class="greyout leftborder">Brooks Koepka +3
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -593,7 +577,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 1</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Collin Morikawa E
 -1 thru 2</td>
       <td>Jon Rahm E
@@ -634,6 +618,22 @@ Not started</td>
 +2 thru 1</td>
       <td class="greyout">Jordan Spieth +2
 E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson(W) -3
+E thru 2</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Matthew Fitzpatrick E
++1 thru 1</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 1</td>
+      <td class="greyout">Louis Oosthuizen +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -737,7 +737,7 @@ Out With Injury</td>
       <td>Corey Conners -2
 E thru 7</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Collin Morikawa E
 -1 thru 2</td>
       <td>Rory McIlroy +1
@@ -769,7 +769,7 @@ Not started</td>
       <td>Corey Conners -2
 E thru 7</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
       <td>Rory McIlroy +1
@@ -849,7 +849,7 @@ Not started</td>
       <td>Tiger Woods(W) -1
 Not started</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Collin Morikawa E
 -1 thru 2</td>
       <td>Rory McIlroy +1
@@ -945,7 +945,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td>Brooks Koepka +3
@@ -991,7 +991,7 @@ Not started</td>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">3</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
       <td>Viktor Hovland +2
@@ -1007,7 +1007,7 @@ Not started</td>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">3</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Jon Rahm(W) E
 -2 thru 2</td>
       <td>Viktor Hovland +2
@@ -1033,7 +1033,7 @@ Not started</td>
       <td class="greyout leftborder">Sam Burns +4
 +1 thru 3</td>
       <td class="greyout">Justin Rose +6
-+2 thru 7</td>
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
