--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:59:55 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:00:38 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -163,7 +163,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 1</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Tony Finau -1
 Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -220,22 +220,6 @@ E thru 1</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Matthew Fitzpatrick -1
-Not started</td>
-      <td>Will Zalatoris -1
-E thru 1</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
@@ -252,12 +236,28 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 2</td>
+      <td>Matthew Fitzpatrick E
++1 thru 1</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
       <td>Shane Lowry +1
@@ -271,7 +271,7 @@ Not started</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-3</td>
       <td>Will Zalatoris -1
-E thru 1</td>
+E thru 2</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Daniel Berger -1
