--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:07:48 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:08:31 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -390,10 +390,10 @@ Not started</td>
 E thru 2</td>
       <td>Xander Schauffele +2
 E thru 1</td>
-      <td class="greyout leftborder">Billy Horschel +3
-+1 thru 2</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 1</td>
+      <td class="greyout">Billy Horschel +4
++2 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
