--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:09:57 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:10:40 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -262,9 +262,9 @@ Not started</td>
 E thru 2</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 1</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
 E thru 1</td>
     </tr>
     <tr>
@@ -342,8 +342,8 @@ E thru 7</td>
 E thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
       <td class="greyout">Brooks Koepka +3
 E thru 1</td>
     </tr>
@@ -422,9 +422,9 @@ E thru 7</td>
 E thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 1</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
 E thru 1</td>
     </tr>
     <tr>
@@ -518,10 +518,10 @@ E thru 2</td>
 -2 thru 2</td>
       <td>Rory McIlroy(W) +1
 E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +2
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout">Viktor Hovland +2
 +2 thru 1</td>
-      <td class="greyout">Jordan Spieth +2
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -554,6 +554,38 @@ Not started</td>
 E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson -3
+E thru 3</td>
+      <td>Patrick Cantlay -2
+E thru 2</td>
+      <td>Jon Rahm E
+-2 thru 2</td>
+      <td>Jordan Spieth(W) +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 1</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 2</td>
+      <td>Jon Rahm E
+-2 thru 2</td>
+      <td>Jordan Spieth(W) +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 1</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -598,10 +630,26 @@ Not started</td>
 -1 thru 3</td>
       <td>Jon Rahm E
 -2 thru 2</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout">Robert MacIntyre +2
 +1 thru 9</td>
-      <td class="greyout">Jordan Spieth +2
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -2
+E thru 7</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td>Viktor Hovland +2
++2 thru 1</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -614,10 +662,10 @@ Not started</td>
 -1 thru 6</td>
       <td>Rory McIlroy +1
 E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +2
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout">Viktor Hovland +2
 +2 thru 1</td>
-      <td class="greyout">Jordan Spieth +2
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -630,9 +678,25 @@ Not started</td>
 +1 thru 1</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
       <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Corey Conners -2
+E thru 7</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 1</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -652,38 +716,6 @@ E thru 1</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson -3
-E thru 3</td>
-      <td>Patrick Cantlay -2
-E thru 2</td>
-      <td>Jon Rahm E
--2 thru 2</td>
-      <td>Jordan Spieth(W) +2
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 1</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 2</td>
-      <td>Jon Rahm E
--2 thru 2</td>
-      <td>Jordan Spieth(W) +2
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 4</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-3</td>
       <td>Patrick Cantlay -2
@@ -694,8 +726,8 @@ Not started</td>
 -2 thru 2</td>
       <td>Collin Morikawa E
 -1 thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
       <td class="greyout">Brooks Koepka +3
 E thru 1</td>
     </tr>
@@ -726,10 +758,26 @@ E thru 2</td>
 Not started</td>
       <td>Jon Rahm E
 -2 thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 2</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td>Xander Schauffele +2
+E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 1</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -748,22 +796,6 @@ E thru 1</td>
 +2 thru 1</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -2
-E thru 7</td>
-      <td>Viktor Hovland +2
-+2 thru 1</td>
-      <td>Xander Schauffele +2
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners -2
@@ -773,22 +805,6 @@ E thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
       <td>Rory McIlroy +1
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Corey Conners -2
-E thru 7</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td>Jordan Spieth +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 1</td>
@@ -828,19 +844,19 @@ E thru 1</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
       <td>Patrick Cantlay -2
 E thru 2</td>
-      <td>Xander Schauffele +2
-E thru 1</td>
-      <td>Jordan Spieth +2
-E thru 1</td>
+      <td>Jon Rahm(W) E
+-2 thru 2</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 1</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -860,17 +876,33 @@ E thru 1</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">0</td>
-      <td>Patrick Cantlay -2
-E thru 2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
       <td>Jon Rahm(W) E
 -2 thru 2</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Jordan Spieth +2
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td>Viktor Hovland +2
++2 thru 1</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td class="greyout">Brooks Koepka +3
+E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -2
+E thru 7</td>
+      <td>Jon Rahm(W) E
+-2 thru 2</td>
+      <td>Rory McIlroy +1
+E thru 1</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
@@ -892,35 +924,19 @@ E thru 1</td>
 E thru 1</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Jon Rahm(W) E
--2 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 1</td>
+      <td>Patrick Cantlay -2
+E thru 2</td>
+      <td>Collin Morikawa E
+-1 thru 3</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
       <td>Xander Schauffele +2
 E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 1</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -2
-E thru 7</td>
-      <td>Jon Rahm(W) E
--2 thru 2</td>
-      <td>Rory McIlroy +1
-E thru 1</td>
-      <td>Xander Schauffele +2
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -956,20 +972,20 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">2</td>
-      <td>Patrick Cantlay -2
+      <td>Will Zalatoris -1
 E thru 2</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
-      <td>Xander Schauffele +2
-E thru 1</td>
-      <td>Jordan Spieth +2
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 1</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td>Jon Rahm E
+-2 thru 2</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td>Viktor Hovland +2
++2 thru 1</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -988,36 +1004,36 @@ Not started</td>
 +3 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">3</td>
-      <td>Will Zalatoris -1
-E thru 2</td>
-      <td>Jon Rahm E
--2 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 1</td>
-      <td>Jordan Spieth +2
-E thru 1</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 4</td>
-    </tr>
-    <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Will Zalatoris -1
 E thru 2</td>
       <td>Jon Rahm(W) E
 -2 thru 2</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
       <td>Viktor Hovland +2
 +2 thru 1</td>
-      <td>Jordan Spieth +2
-E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa E
+-1 thru 3</td>
+      <td>Jon Rahm E
+-2 thru 2</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td>Viktor Hovland(W) +2
++2 thru 1</td>
+      <td class="greyout leftborder">Patrick Reed +2
+E thru 6</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
@@ -1036,31 +1052,15 @@ Not started</td>
 +2 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa E
--1 thru 3</td>
-      <td>Jon Rahm E
--2 thru 2</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 1</td>
-      <td>Patrick Reed +2
-E thru 6</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
-    </tr>
-    <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Jon Rahm E
 -2 thru 2</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
       <td>Viktor Hovland +2
 +2 thru 1</td>
       <td>Xander Schauffele +2
-E thru 1</td>
-      <td>Jordan Spieth +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 1</td>
@@ -1069,14 +1069,14 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Jon Rahm E
 -2 thru 2</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
       <td>Viktor Hovland +2
 +2 thru 1</td>
       <td>Xander Schauffele +2
-E thru 1</td>
-      <td>Jordan Spieth +2
 E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
