--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:09:57 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:10:40 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,16 +141,16 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -2
 E thru 7</td>
-      <td>Xander Schauffele +2
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
       <td class="greyout">Sam Burns +5
 +2 thru 4</td>
@@ -252,6 +252,22 @@ E thru 1</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson -3
+E thru 3</td>
+      <td>Patrick Cantlay -2
+E thru 2</td>
+      <td>Jon Rahm E
+-2 thru 2</td>
+      <td>Jordan Spieth(W) +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 1</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 1</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -3
@@ -260,10 +276,10 @@ Not started</td>
 E thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
-      <td>Shane Lowry +1
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 E thru 1</td>
     </tr>
@@ -294,8 +310,8 @@ Not started</td>
 -2 thru 2</td>
       <td>Collin Morikawa E
 -1 thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
       <td class="greyout">Brooks Koepka +3
 E thru 1</td>
     </tr>
@@ -310,39 +326,23 @@ Not started</td>
 -1 thru 3</td>
       <td>Jon Rahm E
 -2 thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
       <td class="greyout">Robert MacIntyre +2
 +1 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson -3
-E thru 3</td>
-      <td>Patrick Cantlay -2
-E thru 2</td>
-      <td>Jon Rahm E
--2 thru 2</td>
-      <td>Jordan Spieth(W) +2
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 1</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 1</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Corey Conners -2
 E thru 7</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
       <td>Viktor Hovland +2
 +2 thru 1</td>
-      <td>Xander Schauffele +2
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
@@ -365,14 +365,14 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners -2
 E thru 7</td>
       <td>Jon Rahm E
 -2 thru 2</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
       <td>Xander Schauffele +2
-E thru 1</td>
-      <td>Jordan Spieth +2
 E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
